[gd_scene load_steps=2 format=3 uid="uid://cb5wm4qcvhbtu"]

[ext_resource type="Script" uid="uid://7vvynp4immu5" path="res://addons/librarian/ui/dialogs/new_field_dialog.gd" id="1_48lqv"]

[node name="NewFieldDialog" type="ConfirmationDialog"]
title = "New Field"
initial_position = 2
size = Vector2i(400, 200)
visible = true
ok_button_text = "Add"
dialog_hide_on_ok = false
script = ExtResource("1_48lqv")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="NameLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TypeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Type:"

[node name="TypeOption" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Flag"
popup/item_0/id = 0
popup/item_1/text = "Number"
popup/item_1/id = 1
popup/item_2/text = "Text"
popup/item_2/id = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="GridContainer/NameEdit" to="." method="_on_new_name"]
